# Table2Code

./: CMakeLists.txt  README.md
generate/: TableGenerateTemplate_Header.xml  TableGenerateTemplate_Impl.xml  TableGenerateTemplate_ManagerImpl.xml  generate_utils.py  main.py
src/: main.cpp
src/table/: table_array.h  table_cell.cpp  table_cell.h  table_file.cpp  table_file.h  table_impl.cpp  table_instance.h  table_item.h  table_manager.cpp  table_manager.h  table_record.cpp  table_record.h  table_test.h
src/utils/: utils.cpp  utils.h
tables/: Array.txt  Complex.txt  Item.txt  TestTable.txt
tables/generate/: Table_Impl.cpp  Table_Item.h  Table_Test.h  table_array.h  table_complex.h  table_impl.cpp  table_item.h  table_manager.cpp  table_test.h
